springboot/rvtadmin/istio_config/service1-vc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service
spec:
  hosts:
  - spring.local.com
  gateways:
  - nginx-gateway 
  http:
  - match:
    - uri: /
    route:
    - destination:
        host: service1
        port:
          number: 80
